# MlLapSim

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
notebooks/: Results.ipynb  Train.ipynb  ls1.pt
scripts/: convert_kms_to_myone.py  flip_the_data_in_the_track.py  project_files_to_normal_files.py  render_xyrl_files.py
src/cli/: __main__.py  lapsim.py  tracks.py
src/lapsim/: __init__.py
src/lapsim/encoder/: __init__.py  encoder.py  encoder_input.py  parallel_encoder.py  partition.py
src/lapsim/eval/: __init__.py  evaluation.py
src/lapsim/models/: __init__.py  model_bridge.py
src/lapsim/normalisation/: __init__.py  normalisation_bounds.py  normalised_data.py  transform_normalisation.py
src/lapsim/render/: __init__.py  render_item.py
src/lapsim/utils/: logger.py
src/lapsim/vehicles/: vehicle.py
src/results/: dual_parameter_sweep.py  single_parameter_sweep.py
src/toolkit/: __init__.py  __main__.py
src/toolkit/maths/: __init__.py  splines.py
src/toolkit/tracks/: __init__.py
src/toolkit/utils/: __init__.py  readers.py  spacial_map.py
test/test_cli/test_tracks/: test_cli_encoder.py  test_cli_splicer.py
test/test_lapsim/test_encoder/: test_encoder.py  test_parallel_encoder.py
test/test_lapsim/test_evaluation/: test_evaluation.py
test/test_logger/: test_history.py  test_logging.py
test/test_maths/: test_angles.py  test_functional.py  test_intersections.py  test_lines.py  test_normals.py  test_points.py  test_splines.py
test/test_tracks/test_path/: test_paths.py
test/utils/: test_base.py
tools/: cli.sh  install.sh  test.sh
(+194 files in other folders)
