[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit"
version = "0.13.7"
authors = []
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pydantic >= 2.0.0",
    "scipy",
    "opensimplex",
    "Cython",
    "setuptools",
    "pytest",
    "coverage"
]

[tool.cythonize]
command = "cythonize src/toolkit/maths/normals.pyx --embed"
